solved overflow problem and add target blank to url

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -3,6 +3,10 @@
 
 .container {
   background-color: $color-dark;
-  padding: 20px;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 768px) {
+    height: 100vh;
+  }
 }
