--- a/src/scss/layout/Footer.scss
+++ b/src/scss/layout/Footer.scss
@@ -5,4 +5,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 17px;
 }
