--- a/src/scss/layout/Form.scss
+++ b/src/scss/layout/Form.scss
@@ -7,13 +7,11 @@
     ($color-dusk),
     $color-dusk-two 92%
   );
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px 0 #00000040;
   border: solid 1px rgba(0, 0, 0, 0);
-  margin: 20px 30px;
-  // width: 298.1px;
+  margin: 20px 20px;
   @media (min-width: 768px) {
-    width: 40%;
-    margin: 30px 0 0 16px;
+    margin: 0 30px;
   }
   &__title {
     margin-top: 17px;
@@ -130,7 +128,8 @@
   justify-content: center;
   &__btn,
   &__btn-large {
-    width: 112px;
+    width: 121px;
+    padding: 0 20px;
     margin-top: 10px;
     color: $color-white;
     font-size: 1rem;
@@ -148,16 +147,16 @@
     font-size: 1rem;
     @media (min-width: 768px) {
       font-size: 1.2rem;
-      margin: 16px;
-      width: 160px;
+
       height: 41px;
+      padding: 0 0;
     }
   }
   &__btn-large {
-    width: 139px;
     border: solid 2px $color-white;
     margin-bottom: 56px;
     margin-top: 18px;
+    padding: 0 30px;
     @media (min-width: 768px) {
       width: 190px;
       font-size: 1.6rem;
