--- a/src/scss/layout/Header.scss
+++ b/src/scss/layout/Header.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   @media screen {
-    padding: 20px;
+    padding: 40px 40px 0;
   }
 
   &__nav {
