--- a/src/scss/layout/PreviewCard.scss
+++ b/src/scss/layout/PreviewCard.scss
@@ -3,34 +3,50 @@
 
 .author {
   width: 302px;
-  height: 214px;
-  padding: 22.4px 8.6px 34.5px 9.8px;
-  margin: auto;
+  max-height: 214px;
+  padding: 22px 8px 34px 10px;
+  margin: 0 10px;
   background-color: $color-white;
   color: $greyish-brown;
   transform: translateY(-34px);
   border-radius: 20px;
   display: flex;
   flex-direction: row-reverse;
-  gap: 40px;
   @media (min-width: 768px) {
-    width: 360px;
-    height: 252px;
+    width: 85%;
+    min-height: 282px;
+    max-height: 282px;
+    transform: translateY(-44px);
   }
   &__project {
+    height: 160px;
+    width: 65%;
+    margin: 0 12px;
+    @media (min-width: 768px) {
+      width: 70%;
+      height: 100%;
+    }
     &--subtitle {
+      position: absolute;
+      top: 20px;
+      left: 40%;
+      padding: 2px;
+      background-color: white;
       font-size: 0.8rem;
       text-align: center;
       font-family: $font-family-poppins;
-      margin-top: 12.4px;
-      line-height: 9.4px;
-      @media all and (min-width: 768px) {
+      left: 55%;
+      @media (min-width: 768px) {
         font-size: 1rem;
+        top: 30px;
       }
     }
     &--line {
+      position: relative;
+      z-index: -2;
       width: 100%;
       border: 0;
+      margin-top: 10px;
       height: 2px;
       background-image: linear-gradient(
         to right,
@@ -39,111 +55,185 @@
         rgba(255, 255, 255, 0)
       );
       transform: translateY(-5px);
+      @media (min-width: 768px) {
+        margin-top: 20px;
+      }
     }
     &--title {
+      max-width: 100%;
+      word-wrap: break-word;
       font-size: 1.4rem;
+      max-height: 42px;
+      overflow: auto;
       color: $color-black;
       font-family: $font-family-poppins;
       margin-bottom: 5px;
       margin-top: 12px;
-      @media all and (min-width: 768px) {
+      @media (min-width: 768px) {
         font-size: 2.4rem;
-        line-height: 35px;
+        line-height: 40px;
+        margin: 10px 0 10px 10px;
+        max-height: 80px;
       }
     }
     &--slogan {
+      max-height: 16px;
+      max-width: 100%;
+      overflow: auto;
+      word-wrap: break-word;
       font-size: 1rem;
       margin-bottom: 14px;
       color: $greyish-brown-Two;
       font-family: $font-family-poppins;
-      @media all and (min-width: 768px) {
+      @media (min-width: 768px) {
+        min-height: 26px;
         font-size: 1.6rem;
-        transform: translateY(-50px);
+        transform: translateY(-60px);
+        margin-left: 10px;
       }
     }
     &--description {
       font-size: 0.8rem;
       font-family: $font-family-poppins;
-      @media all and (min-width: 768px) {
+      @media (min-width: 768px) {
         font-size: 1rem;
         transform: translateY(-40px);
+        margin-left: 10px;
       }
     }
     &--desc {
+      max-width: 100%;
+      max-height: 56px;
+      word-wrap: break-word;
+      overflow-y: auto;
       font-size: 0.8rem;
-      margin-bottom: 18.1px;
+      margin-bottom: 5px;
       line-height: 14.1px;
       text-align: justify;
-      margin-right: 22px;
-      @media all and (min-width: 768px) {
+      @media (min-width: 768px) {
         font-size: 1rem;
         transform: translateY(-40px);
         line-height: 17.6px;
+        min-height: 54px;
+        max-height: 80px;
+        margin: 10px 10px 0;
       }
     }
   }
   &__technologies {
     color: $greyish-brown;
-    font-size: 1rem;
-    @media all and (min-width: 768px) {
-      background-color: rgba(0, 0, 0, 0.05);
-      width: 155px;
-      height: 22px;
-      border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    @media (min-width: 768px) {
       text-align: center;
       transform: translateY(-45px);
       padding-top: 6px;
+      margin: 20px 0 34px 10px;
+    }
+    &--text {
+      word-wrap: break-word;
+      overflow: auto;
+      width: 80%;
+      font-size: 1rem;
+      max-height: 26px;
+      @media (min-width: 768px) {
+        background-color: rgba(0, 0, 0, 0.05);
+        font-size: 1.2rem;
+        padding: 5px;
+        overflow: hidden;
+        border-radius: 12px;
+      }
+    }
+    &--icon i {
+      font-size: 1rem;
+      margin: 1px;
+      padding: 0.5px;
+      color: black;
+      box-shadow: 1px 2px 2px grey;
+      border-radius: 100px;
+      @media (min-width: 768px) {
+        font-size: 1.2rem;
+      }
     }
   }
   &__info {
-    width: 40%;
-    text-align: center;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-left: 7px;
     margin-top: 20px;
+    text-align: center;
 
     &--image {
       width: 70px;
       height: 70px;
       border-radius: 50%;
+      @media (min-width: 768px) {
+        width: 100px;
+        height: 100px;
+      }
     }
-
     &--job {
+      max-width: 70%;
+      word-wrap: break-word;
+      max-height: 30px;
       color: $warm-grey;
       font-size: 1rem;
+      overflow: auto;
+      @media (min-width: 768px) {
+        font-size: 1.4rem;
+        max-height: none;
+        min-width: 100%;
+        margin-top: 10px;
+      }
     }
-
     &--name {
+      max-width: 100%;
+      word-wrap: break-word;
+      max-height: 50px;
+      overflow: auto;
       font-size: 1.4rem;
       color: $color-black;
+      @media (min-width: 768px) {
+        font-size: 1.8rem;
+        font-family: $font-family-catamaran;
+        font-weight: bold;
+        max-height: none;
+        min-width: 100%;
+      }
     }
   }
 }
-
 .main {
   @media (min-width: 768px) {
     display: flex;
     flex-direction: row;
-    gap: 48px;
+    align-items: stretch;
   }
 }
 .preview {
-  margin: 31px auto 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   @media (min-width: 768px) {
     width: 50%;
-    /* margin: 21px; */
     margin-left: 70px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
   }
-  &__image {
-    object-fit: cover;
+}
+.imagePreview {
+  padding: 0 20px;
+  height: 307px;
+  object-fit: cover;
+  width: 100%;
+  @media (min-width: 768px) {
+    box-shadow: 2px 5px 5px rgba(1, 1, 1, 0.5);
+    // width: 487px;
+    padding: 0 0;
     width: 100%;
-    @media (min-width: 768px) {
-      width: 487px;
-      height: 545px;
-      object-fit: cover;
-      object-position: center;
-    }
+    height: 60%;
+    object-fit: cover;
+    object-position: center;
   }
 }
